[project]
name = "obsidian-mkdocs-export"
version = "0.1.0"
description = "Export Obsidian vault subfolders as branded MkDocs Material sites"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
obsidian-export = "obsidian_export.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_export"]
